# gauntlet-week1

./: .gitignore  DEMO-SCRIPT.md  EVIDENCE-MANIFEST.md  LICENSE  LIVE-STRESS-RESULTS.md  MANUAL-CI-EVIDENCE.md  Makefile  PROCESS-CAVEAT.md  README.md  WEEK1-REPORT.md
.github/workflows/: ci.yml
scripts/: manual-ci.sh
sprint1-api/: .dockerignore  .gitignore  AI-INTERACTION-LOG.md  DEPLOYMENT-GUIDE.md  Dockerfile  PEER-REVIEW-NOTES.md  README.md  SPEC.md  render.yaml  requirements.txt
sprint1-api/app/: database.py  main.py  models.py
sprint1-api/tests/: __init__.py  conftest.py  test_api.py
sprint2-cli/: AI-INTERACTION-LOG.md  PEER-REVIEW-NOTES.md  README.md  SPEC.md  pyproject.toml  requirements.txt
sprint2-cli/src/mcpfs/: __init__.py  cli.py  mcp_client.py  operations.py
sprint2-cli/tests/: __init__.py  conftest.py  fake_mcp_server.py  test_cli.py  test_mcp_client.py  test_operations_unit.py
