[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpfs"
version = "1.0.0"
description = "Intelligent file operations via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Gauntlet Engineer", email = "engineer@gauntlet.ai"}
]
keywords = ["mcp", "cli", "filesystem", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mcpfs = "mcpfs.cli:main"

[tool.setuptools]
packages = ["mcpfs"]

[tool.setuptools.package-dir]
"" = "src"
